<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="RegisterActivity">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="127dp"
      android:layout_marginTop="50dp"
      app:srcCompat="@drawable/logo" />

  <EditText
      android:id="@+id/edittext_username"
      android:layout_width="206dp"
      android:layout_height="40dp"
      android:layout_marginTop="10dp"
      android:drawableLeft="@android:drawable/ic_menu_myplaces"
      android:hint="@string/username"
      android:paddingLeft="2dp"
      android:textColor="@color/black" />

  <EditText
      android:id="@+id/edittext_password"
      android:layout_width="206dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:drawableLeft="@android:drawable/ic_lock_lock"
      android:hint="@string/password"
      android:textColor="@color/black" />

  <EditText
      android:id="@+id/edittext_cnf_password"
      android:layout_width="206dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:drawableLeft="@android:drawable/ic_lock_lock"
      android:hint="@string/confirm_password"
      android:textColor="@color/black" />

  <Button
      android:id="@+id/button_register"
      android:layout_width="237dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:background="#2196F3"
      android:text="@string/register"
      android:textColor="#ffffff" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/already_registered"
        android:textColor="@color/color_white" />

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:text="@string/login"
        android:textColor="#81D0F4"
        android:textSize="16sp"
        android:textStyle="bold" />
  </LinearLayout>

  <Button
      android:id="@+id/btnUpdate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:text="Изменить пароль"
      android:textSize="15dp" />

  <Button
      android:id="@+id/btnDelete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="Удалить учетную запись"
      android:textSize="15dp" />


</LinearLayout>