<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    android:backgroundTint="#3F51B5"
    android:longClickable="false"
    android:theme="@style/Theme.Design.NoActionBar"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@string/app_in_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:text="Рисуй"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:textSize="65sp" />

        <TextView
            android:id="@string/app_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:text="Создай свой рисунок!"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="298dp"
            app:srcCompat="@drawable/male_painter_with_roller_and_ladder_x7sqb8ayx7rd" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:text="@string/text_bottom2"
        android:textColor="@color/text_bottom"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_bottom"
        android:layout_margin="15dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:fontFamily="serif"
            android:longClickable="false"
            android:onClick="StartNewActivity"
            android:text="@string/btnSignIn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_register"
            android:fontFamily="serif"
            android:onClick="StarActivity"
            android:text="@string/btnRegister"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>